--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
  }
  .box{
     background-color:  hsl(0, 0%, 100%);
@@ -24,12 +25,12 @@
  }
 .img{
     padding: 1em;
-    border-radius: 20px;
     width: 100%;
 }
  img{
     object-fit: cover;
     width: 100%;
+    border-radius: 10px;
  }
  .text{
     text-align: center;
